cabal-version:      3.0
name:               cas
version:            0.1.0.0
-- synopsis:
-- description:
-- license:            MIT
-- license-file:       LICENSE
author:             yimko
--maintainer:         
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable cas
    import:           warnings
    main-is:          Main.hs
    other-modules:  Functions, Parser
    -- other-extensions:
    build-depends:    parsec, base ^>=4.17.2.1
    hs-source-dirs:   app, src
    default-language: Haskell2010

library
    hs-source-dirs:   src
    exposed-modules:  Functions
    other-modules:    Parser
    build-depends:    parsec, base ^>=4.17.2.1
    default-language: Haskell2010